--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en" dir="ltr">
 
 <head>
+
   <meta charset="utf-8">
   <title>Vince's Personal Site</title>
+
+
+  <style>
+    body {
+      background-color: #ece8d9;
+    }
+
+    hr {
+      border-color: silver;
+      border-style: dotted none none;
+      border-width: 5px;
+      width: 40px;
+    }
+  </style>
+
 </head>
+
 
 <body>
   <table cellspacing="20">
@@ -76,7 +93,7 @@
     </tr>
     <tr>
       <td>HTML</td>
-      <td>⭐️</td>
+      <td>⭐️⭐️⭐️</td>
     </tr>
   </table>
 
