--- a/index.html
+++ b/index.html
@@ -5,20 +5,7 @@
 
   <meta charset="utf-8">
   <title>Vince's Personal Site</title>
-
-
-  <style>
-    body {
-      background-color: #ece8d9;
-    }
-
-    hr {
-      border-color: silver;
-      border-style: dotted none none;
-      border-width: 5px;
-      width: 40px;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -41,11 +28,24 @@
   <hr>
 
   <h3>Education</h3>
-  <ul type=square>
+  <ul type=disc>
     <li><a href="https://www.sjsu.edu">San Jose State University</a></li>
-    <li><a href="https://www.ucsc.edu">University of California Santa Cruz</a></li>
+    <ul>
+      <li>Bachelor in Science - Business Administration, Management Concentration</li>
+    </ul>
+    <li><a href="https://www.ucsc.edu">University of California, Santa Cruz</a></li>
+    <ul>
+      <li>Marine Biology Program</li>
+    </ul>
     <li><a href="https://www.deanza.edu">De Anza College</a></li>
+    <ul>
+      <li>Associate in Liberal Arts, Business and Computer Information Systems Emphasis</li>
+      <li>Associate for Transfer - Business Administration</li>
+    </ul>
     <li><a href="https://www.mvhs.fuhsd.org">Monta Vista High School</a></li>
+    <ul>
+      <li>High School Diploma</li>
+    </ul>
   </ul>
 
   <hr />
@@ -71,7 +71,11 @@
       </tr>
       <tr>
         <td>2016 - 2019</td>
-        <td>Bookkeeper at Safeway, Inc.</td>
+        <td>Head Bookkeeper at Safeway, Inc.</td>
+      </tr>
+      <tr>
+        <td>2014 - 2016</td>
+        <td>Technician at Cupertino iPhone Repair</td>
       </tr>
     </tbody>
     <tfoot>
@@ -85,16 +89,27 @@
   <table cellspacing="10">
     <tr>
       <td>Salesforce - Classic & Lightning</td>
-      <td>Pipeline Management, Lead/Opportunity Management, Reporting</td>
+      <td>
+        <ul>
+          <li>Pipline Management</li>
+          <li>Lead/Opportunity/Quote Management</li>
+          <li>Customer Relationship Management</li>
+        </ul>
+      </td>
     </tr>
+
+    <br />
+
     <tr>
       <td>Outlook</td>
       <td>⭐️⭐️⭐️⭐️⭐️</td>
     </tr>
+
     <tr>
       <td>HTML</td>
       <td>⭐️⭐️⭐️</td>
     </tr>
+
   </table>
 
 
