--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="https://pbs.twimg.com/profile_images/1275958445087182853/qpxBt8Ay_400x400.jpg" alt="misteruyu profile picture" />
+      <td><a href="https://www.instagram.com/vinikeneke"> <img src="images/vinceimg.png" alt="misteruyu profile picture"/>
       </td>
       <td>
         <h1>Vincent Nguyen</h1>
-        <p><em>Account Executive at <strong><a href="https://www.splashtop.com">Splashtop</a></strong></em></p>
+        <p><em><a href="https://www.linkedin.com/in/vincewsnguyen">Account Executive</a></em> at <strong><a href="https://www.splashtop.com">Splashtop</a></strong></em></p>
         <p>Best in class remote access solution, wfh seamlessly!</p>
       </td>
     </tr>
@@ -29,19 +29,9 @@
 
   <h3>Education</h3>
   <ul type=disc>
-    <li><a href="https://www.sjsu.edu">San Jose State University</a></li>
-    <ul>
-      <li>Bachelor in Science - Business Administration, Management Concentration</li>
-    </ul>
-    <li><a href="https://www.deanza.edu">De Anza College</a></li>
-    <ul>
-      <li>Associate in Liberal Arts, Business and Computer Information Systems Emphasis</li>
-      <li>Associate for Transfer - Business Administration</li>
-    </ul>
-    <li><a href="https://www.mvhs.fuhsd.org">Monta Vista High School</a></li>
-    <ul>
-      <li>High School Diploma</li>
-    </ul>
+    <li><strong><a href="https://www.sjsu.edu">San Jose State University</a></strong> - <em>Bachelor in Science - Business Administration, Management Concentration</em></li>
+    <li><strong><a href="https://www.deanza.edu">De Anza College</a></strong> - <em>Associate in Liberal Arts, Business and Computer Information Systems Emphasis</em></li>
+    <li><strong><a href="https://www.mvhs.fuhsd.org">Monta Vista High School</a></strong> - <em>High School Diploma</em></li>
   </ul>
 
   <hr />
@@ -50,7 +40,7 @@
   <!--
   <p>2019 - Current Account Executive at Splashtop, Inc.</p>
   <p>2016 - 2019 Bookkeeper at Safeway, Inc.</p>
--->
+  -->
 
   <table cellspacing="10">
     <thead>
@@ -85,25 +75,37 @@
   <table cellspacing="10">
     <tr>
       <td>Salesforce - Classic & Lightning</td>
-      <td>
-        <ul>
-          <li>Pipline Management</li>
-          <li>Lead/Opportunity/Quote Management</li>
-          <li>Customer Relationship Management</li>
-        </ul>
-      </td>
+      <td>⭐️⭐️⭐️⭐️</td>
     </tr>
-
-    <br />
 
     <tr>
       <td>Outlook</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
+      <td>⭐️⭐️⭐️⭐️</td>
+    </tr>
+
+    <tr>
+      <td>Microsoft Excel</td>
+      <td>⭐️⭐️⭐️</td>
+    </tr>
+
+    <tr>
+      <td>Microsoft Word</td>
+      <td>⭐️⭐️⭐️</td>
+    </tr>
+
+    <tr>
+      <td>Microsoft PowerPoint</td>
+      <td>⭐️⭐️⭐️</td>
     </tr>
 
     <tr>
       <td>HTML</td>
       <td>⭐️⭐️⭐️</td>
+    </tr>
+
+    <tr>
+      <td>CSS</td>
+      <td>⭐️⭐️</td>
     </tr>
 
   </table>
