--- a/index.html
+++ b/index.html
@@ -97,17 +97,18 @@
       <td>Microsoft PowerPoint</td>
       <td>⭐️⭐️⭐️</td>
     </tr>
-
+  </table
+   
+  <table cellspacing="10">
     <tr>
       <td>HTML</td>
-      <td>⭐️⭐️⭐️</td>
+      <td>⭐️⭐️</td>
     </tr>
 
     <tr>
       <td>CSS</td>
       <td>⭐️⭐️</td>
     </tr>
-
   </table>
 
 
